// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`WalletVote > should disable vote button when balance is less than votesAmountStep 1`] = `
<DocumentFragment>
  <div
    class="-mt-4 flex w-full flex-col items-center md:mt-0 md:flex-row md:items-center"
    data-testid="WalletVote"
  >
    <div
      class="xs:justify-center flex w-full flex-row items-center justify-start md:justify-start"
      data-testid="EmptyVotes"
    >
      <div
        class="text-theme-secondary-700 dark:text-theme-dark-200 dim:text-theme-dim-200 px-[22px] pb-4 text-center text-base font-semibold md:mt-0 md:px-0 md:pb-0 md:text-left"
      >
        You have not voted for a Validator yet. 
        <span>
          <span>
            <a
              class="relative cursor-pointer space-x-1 font-semibold no-underline transition-colors focus:outline-hidden text-theme-primary-600 hover:text-theme-primary-700 active:text-theme-primary-400 dark:hover:text-theme-primary-500 dim:text-theme-dim-navy-600 dim-hover:text-theme-dim-navy-700 ring-focus group/inner inline-flex items-center"
              data-ring-focus-margin="-m-1"
              data-testid="Link"
              href="https://arkvault.io/docs/transactions/vote"
              rel="noopener noreferrer"
            >
              <span
                class="border-b border-transparent break-all transition-colors delay-100 duration-200 group-hover/inner:border-current"
              >
                <span
                  class="text-base leading-5"
                >
                  Learn more
                </span>
              </span>
              <div
                class="mb-[3px] shrink-0 align-middle duration-200 inline-block text-sm"
                data-testid="Link__external"
              >
                <div
                  style="height: 12px; width: 12px;"
                >
                  <svg
                    id="arrow-external"
                    style="height: 100%; width: 100%;"
                    viewBox="0 0 20 20"
                    x="0"
                    xml:space="preserve"
                    xmlns="http://www.w3.org/2000/svg"
                    y="0"
                  >
                    <path
                      d="M18.999 6.43V1h-5.43m5.43 0L7.033 12.966M9.749 4h-7.5c-.625 0-1.25.625-1.25 1.25v12.5c0 .625.625 1.25 1.25 1.25h12.5c.625 0 1.25-.625 1.25-1.25v-7.5"
                      fill="none"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    />
                  </svg>
                </div>
              </div>
            </a>
          </span>
        </span>
      </div>
    </div>
    <div
      class="w-full md:w-auto md:max-md:self-end"
    >
      <span>
        <span>
          <div>
            <button
              class="px-5 py-3 text-base relative items-center justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-hidden rounded cursor-pointer focus:outline-hidden focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed disabled:text-theme-secondary-400 dark:disabled:text-theme-secondary-700 dim:disabled:bg-theme-dim-700 dim:disabled:text-theme-secondary-600 text-theme-primary-600 dark:text-theme-dark-navy-400 dim:text-theme-dim-navy-600 mt-4 hidden w-full space-x-2 disabled:bg-transparent md:mt-0 md:flex md:w-auto md:px-2 md:py-[3px] dark:disabled:bg-transparent"
              data-testid="WalletVote__button"
              disabled=""
              type="button"
            >
              <div
                class="flex items-center gap-2"
              >
                <div>
                  <div
                    style="height: 16px; width: 16px;"
                  >
                    <svg
                      id="vote"
                      style="height: 100%; width: 100%;"
                      viewBox="0 0 20 20"
                      x="0"
                      xml:space="preserve"
                      xmlns="http://www.w3.org/2000/svg"
                      y="0"
                    >
                      <g
                        fill="none"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                      >
                        <path
                          d="M7 9.404l2.1 3.182c.2.298.4.398.7.398s.6-.1.8-.299l6.7-9.05"
                        />
                        <path
                          d="M19 12.337v4.077C19 17.807 17.9 19 16.5 19H3.6C2.2 18.9 1 17.906 1 16.414V3.486C1 2.094 2.1 1 3.5 1h6.8"
                        />
                      </g>
                    </svg>
                  </div>
                </div>
                <span>
                  Vote
                </span>
              </div>
            </button>
            <button
              class="px-5 py-3 space-x-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-hidden rounded cursor-pointer focus:outline-hidden focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed disabled:text-theme-secondary-400 dark:disabled:text-theme-secondary-700 dim:disabled:bg-theme-dim-700 dim:disabled:text-theme-secondary-600 text-theme-primary-600 dim:text-theme-dim-navy-600 w-full disabled:bg-transparent md:hidden dark:text-white dark:disabled:bg-transparent"
              data-testid="WalletVote__button_mobile"
              disabled=""
              type="button"
            >
              <div
                class="flex items-center gap-2"
              >
                <div>
                  <div
                    style="height: 16px; width: 16px;"
                  >
                    <svg
                      id="vote"
                      style="height: 100%; width: 100%;"
                      viewBox="0 0 20 20"
                      x="0"
                      xml:space="preserve"
                      xmlns="http://www.w3.org/2000/svg"
                      y="0"
                    >
                      <g
                        fill="none"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                      >
                        <path
                          d="M7 9.404l2.1 3.182c.2.298.4.398.7.398s.6-.1.8-.299l6.7-9.05"
                        />
                        <path
                          d="M19 12.337v4.077C19 17.807 17.9 19 16.5 19H3.6C2.2 18.9 1 17.906 1 16.414V3.486C1 2.094 2.1 1 3.5 1h6.8"
                        />
                      </g>
                    </svg>
                  </div>
                </div>
                <span>
                  Vote
                </span>
              </div>
            </button>
          </div>
        </span>
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`WalletVote > should render 1`] = `
<DocumentFragment>
  <div
    class="-mt-4 flex w-full flex-col items-center md:mt-0 md:flex-row md:items-center"
    data-testid="WalletVote"
  >
    <div
      class="xs:justify-center flex w-full flex-row items-center justify-start md:justify-start"
      data-testid="EmptyVotes"
    >
      <div
        class="text-theme-secondary-700 dark:text-theme-dark-200 dim:text-theme-dim-200 px-[22px] pb-4 text-center text-base font-semibold md:mt-0 md:px-0 md:pb-0 md:text-left"
      >
        You have not voted for a Validator yet. 
        <span>
          <span>
            <a
              class="relative cursor-pointer space-x-1 font-semibold no-underline transition-colors focus:outline-hidden text-theme-primary-600 hover:text-theme-primary-700 active:text-theme-primary-400 dark:hover:text-theme-primary-500 dim:text-theme-dim-navy-600 dim-hover:text-theme-dim-navy-700 ring-focus group/inner inline-flex items-center"
              data-ring-focus-margin="-m-1"
              data-testid="Link"
              href="https://arkvault.io/docs/transactions/vote"
              rel="noopener noreferrer"
            >
              <span
                class="border-b border-transparent break-all transition-colors delay-100 duration-200 group-hover/inner:border-current"
              >
                <span
                  class="text-base leading-5"
                >
                  Learn more
                </span>
              </span>
              <div
                class="mb-[3px] shrink-0 align-middle duration-200 inline-block text-sm"
                data-testid="Link__external"
              >
                <div
                  style="height: 12px; width: 12px;"
                >
                  <svg
                    id="arrow-external"
                    style="height: 100%; width: 100%;"
                    viewBox="0 0 20 20"
                    x="0"
                    xml:space="preserve"
                    xmlns="http://www.w3.org/2000/svg"
                    y="0"
                  >
                    <path
                      d="M18.999 6.43V1h-5.43m5.43 0L7.033 12.966M9.749 4h-7.5c-.625 0-1.25.625-1.25 1.25v12.5c0 .625.625 1.25 1.25 1.25h12.5c.625 0 1.25-.625 1.25-1.25v-7.5"
                      fill="none"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    />
                  </svg>
                </div>
              </div>
            </a>
          </span>
        </span>
      </div>
    </div>
    <div
      class="w-full md:w-auto md:max-md:self-end"
    />
  </div>
</DocumentFragment>
`;

exports[`WalletVote > should render as all resigned 1`] = `
<DocumentFragment>
  <div
    class="-mt-4 flex w-full flex-col items-center md:mt-0 md:flex-row md:items-center"
    data-testid="WalletVote"
  >
    <div
      class="border-theme-secondary-300 dark:border-theme-dark-700 dim:border-theme-dim-700 mb-3 flex w-full flex-col items-start justify-between gap-0 overflow-hidden rounded border md:mb-0 md:flex-row md:items-center md:gap-2 md:rounded-none md:border-none"
    >
      <div
        class="bg-theme-secondary-100 dark:bg-theme-dark-950 dim:bg-theme-dim-950 md:dim:bg-transparent flex w-full flex-1 flex-row items-center gap-2 p-3 text-sm leading-[17px] font-semibold md:w-auto md:bg-transparent md:p-0 md:text-base md:leading-5 md:dark:bg-transparent"
      >
        <p
          class="text-theme-secondary-700 dark:text-theme-dark-200 dim:text-theme-dim-200 text-sm md:text-base md:leading-5"
        >
          Voting for
        </p>
        <div
          class="xs:max-w-32 max-w-28 flex-1 truncate sm:max-w-40 md:max-w-60"
        >
          <div
            class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
          >
            <span>
              <span>
                <span
                  class="no-ligatures min-w-0 overflow-hidden dark:text-theme-dark-50 dim:text-theme-dim-50 text-sm md:text-base md:leading-5 font-semibold text-base"
                  data-testid="Address__address"
                >
                  0xcd15953dD076e56Dc6a5bc46Da23308Ff3158EE6
                </span>
              </span>
            </span>
          </div>
        </div>
      </div>
      <div
        class="flex flex-col gap-2 px-4 py-3 text-base leading-5 font-semibold md:flex-row md:items-center md:px-0 md:py-0"
      >
        <p
          class="text-theme-secondary-700 dark:text-theme-dark-200 dim:text-theme-dim-200 text-sm md:text-base md:leading-5"
        >
          Rank
        </p>
        <p
          class="text-theme-secondary-900 dark:text-theme-dark-50 dim:text-theme-dim-50 mb-2 text-sm font-semibold md:mb-0 md:text-base md:leading-5"
        >
          N/A
        </p>
        <p
          class="text-theme-secondary-700 dark:text-theme-dark-200 dim:text-theme-dim-200 text-sm md:hidden"
        >
          Validator Status
        </p>
        <div
          class="font-semibold overflow-hidden no-ligatures px-1 border-2 rounded text-theme-danger-500 border-theme-danger-100 bg-theme-danger-100 dim:border-solid flex h-fit w-fit items-center justify-center border-none py-0.5 text-xs dark:border-solid"
        >
          All Resigned
        </div>
        <div
          class="relative mx-2 border-t-0 border-l border-solid align-middle border-theme-secondary-300 dark:border-s-theme-dark-700 dim:border-s-theme-dim-700 mr-3 ml-1 hidden h-5 p-0 md:flex"
        />
      </div>
    </div>
    <div
      class="w-full md:w-auto md:max-md:self-end"
    >
      <span>
        <span>
          <div>
            <button
              class="px-5 py-3 text-base relative items-center justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-hidden rounded cursor-pointer focus:outline-hidden focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed bg-transparent dark:bg-transparent hover:text-theme-primary-700 hover:bg-theme-primary-200 dark:hover:bg-theme-secondary-800 dark:hover:text-white dim-hover:text-theme-dim-50 dim-hover:bg-theme-dim-700 dim:bg-transparent text-theme-primary-600 dark:text-theme-dark-navy-400 dim:text-theme-dim-navy-600 mt-4 hidden w-full space-x-2 disabled:bg-transparent md:mt-0 md:flex md:w-auto md:px-2 md:py-[3px] dark:disabled:bg-transparent"
              data-testid="WalletVote__button"
              type="button"
            >
              <div
                class="flex items-center gap-2"
              >
                <div>
                  <div
                    style="height: 16px; width: 16px;"
                  >
                    <svg
                      id="vote"
                      style="height: 100%; width: 100%;"
                      viewBox="0 0 20 20"
                      x="0"
                      xml:space="preserve"
                      xmlns="http://www.w3.org/2000/svg"
                      y="0"
                    >
                      <g
                        fill="none"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                      >
                        <path
                          d="M7 9.404l2.1 3.182c.2.298.4.398.7.398s.6-.1.8-.299l6.7-9.05"
                        />
                        <path
                          d="M19 12.337v4.077C19 17.807 17.9 19 16.5 19H3.6C2.2 18.9 1 17.906 1 16.414V3.486C1 2.094 2.1 1 3.5 1h6.8"
                        />
                      </g>
                    </svg>
                  </div>
                </div>
                <span>
                  Vote
                </span>
              </div>
            </button>
            <button
              class="px-5 py-3 space-x-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-hidden rounded cursor-pointer focus:outline-hidden focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed dark:bg-theme-dark-800 bg-theme-primary-100 hover:bg-theme-primary-800 hover:text-white dark:hover:bg-theme-primary-500 dim:bg-theme-dim-navy-900 dim-hover:bg-theme-dim-navy-700 dim-hover:text-white text-theme-primary-600 dim:text-theme-dim-navy-600 w-full disabled:bg-transparent md:hidden dark:text-white dark:disabled:bg-transparent"
              data-testid="WalletVote__button_mobile"
              type="button"
            >
              <div
                class="flex items-center gap-2"
              >
                <div>
                  <div
                    style="height: 16px; width: 16px;"
                  >
                    <svg
                      id="vote"
                      style="height: 100%; width: 100%;"
                      viewBox="0 0 20 20"
                      x="0"
                      xml:space="preserve"
                      xmlns="http://www.w3.org/2000/svg"
                      y="0"
                    >
                      <g
                        fill="none"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                      >
                        <path
                          d="M7 9.404l2.1 3.182c.2.298.4.398.7.398s.6-.1.8-.299l6.7-9.05"
                        />
                        <path
                          d="M19 12.337v4.077C19 17.807 17.9 19 16.5 19H3.6C2.2 18.9 1 17.906 1 16.414V3.486C1 2.094 2.1 1 3.5 1h6.8"
                        />
                      </g>
                    </svg>
                  </div>
                </div>
                <span>
                  Vote
                </span>
              </div>
            </button>
          </div>
        </span>
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`WalletVote > should render disabled vote button 1`] = `
<DocumentFragment>
  <div
    class="-mt-4 flex w-full flex-col items-center md:mt-0 md:flex-row md:items-center"
    data-testid="WalletVote"
  >
    <div
      class="xs:justify-center flex w-full flex-row items-center justify-start md:justify-start"
      data-testid="EmptyVotes"
    >
      <div
        class="text-theme-secondary-700 dark:text-theme-dark-200 dim:text-theme-dim-200 px-[22px] pb-4 text-center text-base font-semibold md:mt-0 md:px-0 md:pb-0 md:text-left"
      >
        You have not voted for a Validator yet. 
        <span>
          <span>
            <a
              class="relative cursor-pointer space-x-1 font-semibold no-underline transition-colors focus:outline-hidden text-theme-primary-600 hover:text-theme-primary-700 active:text-theme-primary-400 dark:hover:text-theme-primary-500 dim:text-theme-dim-navy-600 dim-hover:text-theme-dim-navy-700 ring-focus group/inner inline-flex items-center"
              data-ring-focus-margin="-m-1"
              data-testid="Link"
              href="https://arkvault.io/docs/transactions/vote"
              rel="noopener noreferrer"
            >
              <span
                class="border-b border-transparent break-all transition-colors delay-100 duration-200 group-hover/inner:border-current"
              >
                <span
                  class="text-base leading-5"
                >
                  Learn more
                </span>
              </span>
              <div
                class="mb-[3px] shrink-0 align-middle duration-200 inline-block text-sm"
                data-testid="Link__external"
              >
                <div
                  style="height: 12px; width: 12px;"
                >
                  <svg
                    id="arrow-external"
                    style="height: 100%; width: 100%;"
                    viewBox="0 0 20 20"
                    x="0"
                    xml:space="preserve"
                    xmlns="http://www.w3.org/2000/svg"
                    y="0"
                  >
                    <path
                      d="M18.999 6.43V1h-5.43m5.43 0L7.033 12.966M9.749 4h-7.5c-.625 0-1.25.625-1.25 1.25v12.5c0 .625.625 1.25 1.25 1.25h12.5c.625 0 1.25-.625 1.25-1.25v-7.5"
                      fill="none"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    />
                  </svg>
                </div>
              </div>
            </a>
          </span>
        </span>
      </div>
    </div>
    <div
      class="w-full md:w-auto md:max-md:self-end"
    >
      <span>
        <span>
          <div>
            <button
              class="px-5 py-3 text-base relative items-center justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-hidden rounded cursor-pointer focus:outline-hidden focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed disabled:text-theme-secondary-400 dark:disabled:text-theme-secondary-700 dim:disabled:bg-theme-dim-700 dim:disabled:text-theme-secondary-600 text-theme-primary-600 dark:text-theme-dark-navy-400 dim:text-theme-dim-navy-600 mt-4 hidden w-full space-x-2 disabled:bg-transparent md:mt-0 md:flex md:w-auto md:px-2 md:py-[3px] dark:disabled:bg-transparent"
              data-testid="WalletVote__button"
              disabled=""
              type="button"
            >
              <div
                class="flex items-center gap-2"
              >
                <div>
                  <div
                    style="height: 16px; width: 16px;"
                  >
                    <svg
                      id="vote"
                      style="height: 100%; width: 100%;"
                      viewBox="0 0 20 20"
                      x="0"
                      xml:space="preserve"
                      xmlns="http://www.w3.org/2000/svg"
                      y="0"
                    >
                      <g
                        fill="none"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                      >
                        <path
                          d="M7 9.404l2.1 3.182c.2.298.4.398.7.398s.6-.1.8-.299l6.7-9.05"
                        />
                        <path
                          d="M19 12.337v4.077C19 17.807 17.9 19 16.5 19H3.6C2.2 18.9 1 17.906 1 16.414V3.486C1 2.094 2.1 1 3.5 1h6.8"
                        />
                      </g>
                    </svg>
                  </div>
                </div>
                <span>
                  Vote
                </span>
              </div>
            </button>
            <button
              class="px-5 py-3 space-x-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-hidden rounded cursor-pointer focus:outline-hidden focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed disabled:text-theme-secondary-400 dark:disabled:text-theme-secondary-700 dim:disabled:bg-theme-dim-700 dim:disabled:text-theme-secondary-600 text-theme-primary-600 dim:text-theme-dim-navy-600 w-full disabled:bg-transparent md:hidden dark:text-white dark:disabled:bg-transparent"
              data-testid="WalletVote__button_mobile"
              disabled=""
              type="button"
            >
              <div
                class="flex items-center gap-2"
              >
                <div>
                  <div
                    style="height: 16px; width: 16px;"
                  >
                    <svg
                      id="vote"
                      style="height: 100%; width: 100%;"
                      viewBox="0 0 20 20"
                      x="0"
                      xml:space="preserve"
                      xmlns="http://www.w3.org/2000/svg"
                      y="0"
                    >
                      <g
                        fill="none"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                      >
                        <path
                          d="M7 9.404l2.1 3.182c.2.298.4.398.7.398s.6-.1.8-.299l6.7-9.05"
                        />
                        <path
                          d="M19 12.337v4.077C19 17.807 17.9 19 16.5 19H3.6C2.2 18.9 1 17.906 1 16.414V3.486C1 2.094 2.1 1 3.5 1h6.8"
                        />
                      </g>
                    </svg>
                  </div>
                </div>
                <span>
                  Vote
                </span>
              </div>
            </button>
          </div>
        </span>
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`WalletVote > should render ledger for incompatible ledger wallet 1`] = `
<DocumentFragment>
  <div
    class="-mt-4 flex w-full flex-col items-center md:mt-0 md:flex-row md:items-center"
    data-testid="WalletVote"
  >
    <div
      class="xs:justify-center flex w-full flex-row items-center justify-start md:justify-start"
      data-testid="EmptyVotes"
    >
      <div
        class="text-theme-secondary-700 dark:text-theme-dark-200 dim:text-theme-dim-200 px-[22px] pb-4 text-center text-base font-semibold md:mt-0 md:px-0 md:pb-0 md:text-left"
      >
        You have not voted for a Validator yet. 
        <span>
          <span>
            <a
              class="relative cursor-pointer space-x-1 font-semibold no-underline transition-colors focus:outline-hidden text-theme-primary-600 hover:text-theme-primary-700 active:text-theme-primary-400 dark:hover:text-theme-primary-500 dim:text-theme-dim-navy-600 dim-hover:text-theme-dim-navy-700 ring-focus group/inner inline-flex items-center"
              data-ring-focus-margin="-m-1"
              data-testid="Link"
              href="https://arkvault.io/docs/transactions/vote"
              rel="noopener noreferrer"
            >
              <span
                class="border-b border-transparent break-all transition-colors delay-100 duration-200 group-hover/inner:border-current"
              >
                <span
                  class="text-base leading-5"
                >
                  Learn more
                </span>
              </span>
              <div
                class="mb-[3px] shrink-0 align-middle duration-200 inline-block text-sm"
                data-testid="Link__external"
              >
                <div
                  style="height: 12px; width: 12px;"
                >
                  <svg
                    id="arrow-external"
                    style="height: 100%; width: 100%;"
                    viewBox="0 0 20 20"
                    x="0"
                    xml:space="preserve"
                    xmlns="http://www.w3.org/2000/svg"
                    y="0"
                  >
                    <path
                      d="M18.999 6.43V1h-5.43m5.43 0L7.033 12.966M9.749 4h-7.5c-.625 0-1.25.625-1.25 1.25v12.5c0 .625.625 1.25 1.25 1.25h12.5c.625 0 1.25-.625 1.25-1.25v-7.5"
                      fill="none"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    />
                  </svg>
                </div>
              </div>
            </a>
          </span>
        </span>
      </div>
    </div>
    <div
      class="w-full md:w-auto md:max-md:self-end"
    />
  </div>
</DocumentFragment>
`;

exports[`WalletVote > should render skeleton if loading 1`] = `
<DocumentFragment>
  <div
    class="border-theme-secondary-300 bg-theme-secondary-100 dark:border-theme-secondary-800 flex flex-col rounded-xl border md:border-0 md:bg-transparent dark:bg-black md:dark:bg-transparent"
    data-testid="WalletVote__skeleton"
  >
    <div
      class="flex h-[1.688rem] w-full items-center px-8 py-4 md:p-0"
    >
      <div
        class="flex items-center space-x-2"
      >
        <p
          class="text-theme-secondary-700 dark:text-theme-dark-200 text-sm font-semibold md:text-base md:leading-5"
        >
          Voting for
        </p>
        <span
          aria-busy="true"
          aria-live="polite"
          class="flex w-auto max-w-full items-center overflow-hidden leading-none"
        >
          <span
            class="react-loading-skeleton"
            style="width: 67px; height: 20px;"
          >
            ‌
          </span>
          <br />
        </span>
      </div>
      <div
        class="ml-auto flex items-center space-x-2"
      >
        <p
          class="text-theme-secondary-700 dark:text-theme-dark-200 text-sm font-semibold md:text-base md:leading-5"
        >
          Rank
        </p>
        <span
          aria-busy="true"
          aria-live="polite"
          class="flex w-auto max-w-full items-center overflow-hidden leading-none"
        >
          <span
            class="react-loading-skeleton"
            style="width: 62px; height: 20px;"
          >
            ‌
          </span>
          <br />
        </span>
        <div
          class="flex items-center space-x-3"
        >
          <span
            aria-busy="true"
            aria-live="polite"
            class="flex w-auto max-w-full items-center overflow-hidden leading-none"
          >
            <span
              class="react-loading-skeleton"
              style="width: 62px; height: 20px;"
            >
              ‌
            </span>
            <br />
          </span>
          <div
            class="h-4 relative mx-2 inline-block border-t-0 border-l border-solid align-middle border-theme-secondary-300 dark:border-theme-secondary-800 dim:border-theme-dim-700"
          />
          <button
            class="px-5 py-3 text-base relative items-center justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-hidden rounded cursor-pointer focus:outline-hidden focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed disabled:text-theme-secondary-400 dark:disabled:text-theme-secondary-700 dim:disabled:bg-theme-dim-700 dim:disabled:text-theme-secondary-600 text-theme-primary-600 dark:text-theme-dark-navy-400 mt-4 hidden w-full space-x-2 disabled:bg-transparent md:mt-0 md:flex md:w-auto md:px-2 md:py-[3px] dark:disabled:bg-transparent"
            disabled=""
            type="button"
          >
            <div
              class="flex items-center gap-2"
            >
              <div>
                <div
                  style="height: 16px; width: 16px;"
                >
                  <svg
                    id="vote"
                    style="height: 100%; width: 100%;"
                    viewBox="0 0 20 20"
                    x="0"
                    xml:space="preserve"
                    xmlns="http://www.w3.org/2000/svg"
                    y="0"
                  >
                    <g
                      fill="none"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    >
                      <path
                        d="M7 9.404l2.1 3.182c.2.298.4.398.7.398s.6-.1.8-.299l6.7-9.05"
                      />
                      <path
                        d="M19 12.337v4.077C19 17.807 17.9 19 16.5 19H3.6C2.2 18.9 1 17.906 1 16.414V3.486C1 2.094 2.1 1 3.5 1h6.8"
                      />
                    </g>
                  </svg>
                </div>
              </div>
              <span>
                Vote
              </span>
            </div>
          </button>
        </div>
      </div>
    </div>
    <div
      class="border-theme-secondary-300 dark:border-theme-secondary-800 flex justify-center border-t px-6 py-4 md:hidden"
    >
      <div
        class="flex h-10 flex-col items-center justify-between"
      >
        <span
          aria-busy="true"
          aria-live="polite"
          class="flex w-auto max-w-full items-center overflow-hidden leading-none"
        >
          <span
            class="react-loading-skeleton"
            style="width: 150px; height: 16px;"
          >
            ‌
          </span>
          <br />
        </span>
        <span
          aria-busy="true"
          aria-live="polite"
          class="flex w-auto max-w-full items-center overflow-hidden leading-none"
        >
          <span
            class="react-loading-skeleton"
            style="width: 100px; height: 14px;"
          >
            ‌
          </span>
          <br />
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`WalletVote > should render the maximum votes 1`] = `
<DocumentFragment>
  <div
    class="-mt-4 flex w-full flex-col items-center md:mt-0 md:flex-row md:items-center"
    data-testid="WalletVote"
  >
    <div
      class="xs:justify-center flex w-full flex-row items-center justify-start md:justify-start"
      data-testid="EmptyVotes"
    >
      <div
        class="text-theme-secondary-700 dark:text-theme-dark-200 dim:text-theme-dim-200 px-[22px] pb-4 text-center text-base font-semibold md:mt-0 md:px-0 md:pb-0 md:text-left"
      >
        You have not voted for a Validator yet. 
        <span>
          <span>
            <a
              class="relative cursor-pointer space-x-1 font-semibold no-underline transition-colors focus:outline-hidden text-theme-primary-600 hover:text-theme-primary-700 active:text-theme-primary-400 dark:hover:text-theme-primary-500 dim:text-theme-dim-navy-600 dim-hover:text-theme-dim-navy-700 ring-focus group/inner inline-flex items-center"
              data-ring-focus-margin="-m-1"
              data-testid="Link"
              href="https://arkvault.io/docs/transactions/vote"
              rel="noopener noreferrer"
            >
              <span
                class="border-b border-transparent break-all transition-colors delay-100 duration-200 group-hover/inner:border-current"
              >
                <span
                  class="text-base leading-5"
                >
                  Learn more
                </span>
              </span>
              <div
                class="mb-[3px] shrink-0 align-middle duration-200 inline-block text-sm"
                data-testid="Link__external"
              >
                <div
                  style="height: 12px; width: 12px;"
                >
                  <svg
                    id="arrow-external"
                    style="height: 100%; width: 100%;"
                    viewBox="0 0 20 20"
                    x="0"
                    xml:space="preserve"
                    xmlns="http://www.w3.org/2000/svg"
                    y="0"
                  >
                    <path
                      d="M18.999 6.43V1h-5.43m5.43 0L7.033 12.966M9.749 4h-7.5c-.625 0-1.25.625-1.25 1.25v12.5c0 .625.625 1.25 1.25 1.25h12.5c.625 0 1.25-.625 1.25-1.25v-7.5"
                      fill="none"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    />
                  </svg>
                </div>
              </div>
            </a>
          </span>
        </span>
      </div>
    </div>
    <div
      class="w-full md:w-auto md:max-md:self-end"
    >
      <span>
        <span>
          <div>
            <button
              class="px-5 py-3 text-base relative items-center justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-hidden rounded cursor-pointer focus:outline-hidden focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed bg-transparent dark:bg-transparent hover:text-theme-primary-700 hover:bg-theme-primary-200 dark:hover:bg-theme-secondary-800 dark:hover:text-white dim-hover:text-theme-dim-50 dim-hover:bg-theme-dim-700 dim:bg-transparent text-theme-primary-600 dark:text-theme-dark-navy-400 dim:text-theme-dim-navy-600 mt-4 hidden w-full space-x-2 disabled:bg-transparent md:mt-0 md:flex md:w-auto md:px-2 md:py-[3px] dark:disabled:bg-transparent"
              data-testid="WalletVote__button"
              type="button"
            >
              <div
                class="flex items-center gap-2"
              >
                <div>
                  <div
                    style="height: 16px; width: 16px;"
                  >
                    <svg
                      id="vote"
                      style="height: 100%; width: 100%;"
                      viewBox="0 0 20 20"
                      x="0"
                      xml:space="preserve"
                      xmlns="http://www.w3.org/2000/svg"
                      y="0"
                    >
                      <g
                        fill="none"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                      >
                        <path
                          d="M7 9.404l2.1 3.182c.2.298.4.398.7.398s.6-.1.8-.299l6.7-9.05"
                        />
                        <path
                          d="M19 12.337v4.077C19 17.807 17.9 19 16.5 19H3.6C2.2 18.9 1 17.906 1 16.414V3.486C1 2.094 2.1 1 3.5 1h6.8"
                        />
                      </g>
                    </svg>
                  </div>
                </div>
                <span>
                  Vote
                </span>
              </div>
            </button>
            <button
              class="px-5 py-3 space-x-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-hidden rounded cursor-pointer focus:outline-hidden focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed dark:bg-theme-dark-800 bg-theme-primary-100 hover:bg-theme-primary-800 hover:text-white dark:hover:bg-theme-primary-500 dim:bg-theme-dim-navy-900 dim-hover:bg-theme-dim-navy-700 dim-hover:text-white text-theme-primary-600 dim:text-theme-dim-navy-600 w-full disabled:bg-transparent md:hidden dark:text-white dark:disabled:bg-transparent"
              data-testid="WalletVote__button_mobile"
              type="button"
            >
              <div
                class="flex items-center gap-2"
              >
                <div>
                  <div
                    style="height: 16px; width: 16px;"
                  >
                    <svg
                      id="vote"
                      style="height: 100%; width: 100%;"
                      viewBox="0 0 20 20"
                      x="0"
                      xml:space="preserve"
                      xmlns="http://www.w3.org/2000/svg"
                      y="0"
                    >
                      <g
                        fill="none"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                      >
                        <path
                          d="M7 9.404l2.1 3.182c.2.298.4.398.7.398s.6-.1.8-.299l6.7-9.05"
                        />
                        <path
                          d="M19 12.337v4.077C19 17.807 17.9 19 16.5 19H3.6C2.2 18.9 1 17.906 1 16.414V3.486C1 2.094 2.1 1 3.5 1h6.8"
                        />
                      </g>
                    </svg>
                  </div>
                </div>
                <span>
                  Vote
                </span>
              </div>
            </button>
          </div>
        </span>
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`WalletVote > should render without votes 1`] = `
<DocumentFragment>
  <div
    class="-mt-4 flex w-full flex-col items-center md:mt-0 md:flex-row md:items-center"
    data-testid="WalletVote"
  >
    <div
      class="xs:justify-center flex w-full flex-row items-center justify-start md:justify-start"
      data-testid="EmptyVotes"
    >
      <div
        class="text-theme-secondary-700 dark:text-theme-dark-200 dim:text-theme-dim-200 px-[22px] pb-4 text-center text-base font-semibold md:mt-0 md:px-0 md:pb-0 md:text-left"
      >
        You have not voted for a Validator yet. 
        <span>
          <span>
            <a
              class="relative cursor-pointer space-x-1 font-semibold no-underline transition-colors focus:outline-hidden text-theme-primary-600 hover:text-theme-primary-700 active:text-theme-primary-400 dark:hover:text-theme-primary-500 dim:text-theme-dim-navy-600 dim-hover:text-theme-dim-navy-700 ring-focus group/inner inline-flex items-center"
              data-ring-focus-margin="-m-1"
              data-testid="Link"
              href="https://arkvault.io/docs/transactions/vote"
              rel="noopener noreferrer"
            >
              <span
                class="border-b border-transparent break-all transition-colors delay-100 duration-200 group-hover/inner:border-current"
              >
                <span
                  class="text-base leading-5"
                >
                  Learn more
                </span>
              </span>
              <div
                class="mb-[3px] shrink-0 align-middle duration-200 inline-block text-sm"
                data-testid="Link__external"
              >
                <div
                  style="height: 12px; width: 12px;"
                >
                  <svg
                    id="arrow-external"
                    style="height: 100%; width: 100%;"
                    viewBox="0 0 20 20"
                    x="0"
                    xml:space="preserve"
                    xmlns="http://www.w3.org/2000/svg"
                    y="0"
                  >
                    <path
                      d="M18.999 6.43V1h-5.43m5.43 0L7.033 12.966M9.749 4h-7.5c-.625 0-1.25.625-1.25 1.25v12.5c0 .625.625 1.25 1.25 1.25h12.5c.625 0 1.25-.625 1.25-1.25v-7.5"
                      fill="none"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    />
                  </svg>
                </div>
              </div>
            </a>
          </span>
        </span>
      </div>
    </div>
    <div
      class="w-full md:w-auto md:max-md:self-end"
    />
  </div>
</DocumentFragment>
`;

exports[`WalletVote > single vote networks > should render a vote for a standby validator 1`] = `
<DocumentFragment>
  <div
    class="-mt-4 flex w-full flex-col items-center md:mt-0 md:flex-row md:items-center"
    data-testid="WalletVote"
  >
    <div
      class="border-theme-secondary-300 dark:border-theme-dark-700 dim:border-theme-dim-700 mb-3 flex w-full flex-col items-start justify-between gap-0 overflow-hidden rounded border md:mb-0 md:flex-row md:items-center md:gap-2 md:rounded-none md:border-none"
    >
      <div
        class="bg-theme-secondary-100 dark:bg-theme-dark-950 dim:bg-theme-dim-950 md:dim:bg-transparent flex w-full flex-1 flex-row items-center gap-2 p-3 text-sm leading-[17px] font-semibold md:w-auto md:bg-transparent md:p-0 md:text-base md:leading-5 md:dark:bg-transparent"
      >
        <p
          class="text-theme-secondary-700 dark:text-theme-dark-200 dim:text-theme-dim-200 text-sm md:text-base md:leading-5"
        >
          Voting for
        </p>
        <div
          class="xs:max-w-32 max-w-28 flex-1 truncate sm:max-w-40 md:max-w-60"
        >
          <div
            class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
          >
            <span>
              <span>
                <span
                  class="no-ligatures min-w-0 overflow-hidden dark:text-theme-dark-50 dim:text-theme-dim-50 text-sm md:text-base md:leading-5 font-semibold text-base"
                  data-testid="Address__address"
                >
                  0xcd15953dD076e56Dc6a5bc46Da23308Ff3158EE6
                </span>
              </span>
            </span>
          </div>
        </div>
      </div>
      <div
        class="flex flex-col gap-2 px-4 py-3 text-base leading-5 font-semibold md:flex-row md:items-center md:px-0 md:py-0"
      >
        <p
          class="text-theme-secondary-700 dark:text-theme-dark-200 dim:text-theme-dim-200 text-sm md:text-base md:leading-5"
        >
          Rank
        </p>
        <p
          class="text-theme-secondary-900 dark:text-theme-dark-50 dim:text-theme-dim-50 mb-2 text-sm font-semibold md:mb-0 md:text-base md:leading-5"
        >
          #54
        </p>
        <p
          class="text-theme-secondary-700 dark:text-theme-dark-200 dim:text-theme-dim-200 text-sm md:hidden"
        >
          Validator Status
        </p>
        <div
          class="font-semibold overflow-hidden no-ligatures px-1 border-2 rounded text-theme-warning-700 border-theme-danger-100 dark:border-theme-warning-700 dim:border-solid flex h-fit w-fit items-center justify-center border-none py-0.5 text-xs dark:border-solid"
        >
          Standby
        </div>
        <div
          class="relative mx-2 border-t-0 border-l border-solid align-middle border-theme-secondary-300 dark:border-s-theme-dark-700 dim:border-s-theme-dim-700 mr-3 ml-1 hidden h-5 p-0 md:flex"
        />
      </div>
    </div>
    <div
      class="w-full md:w-auto md:max-md:self-end"
    />
  </div>
</DocumentFragment>
`;

exports[`WalletVote > single vote networks > should render a vote for a validator without rank 1`] = `
<DocumentFragment>
  <div
    class="-mt-4 flex w-full flex-col items-center md:mt-0 md:flex-row md:items-center"
    data-testid="WalletVote"
  >
    <div
      class="border-theme-secondary-300 dark:border-theme-dark-700 dim:border-theme-dim-700 mb-3 flex w-full flex-col items-start justify-between gap-0 overflow-hidden rounded border md:mb-0 md:flex-row md:items-center md:gap-2 md:rounded-none md:border-none"
    >
      <div
        class="bg-theme-secondary-100 dark:bg-theme-dark-950 dim:bg-theme-dim-950 md:dim:bg-transparent flex w-full flex-1 flex-row items-center gap-2 p-3 text-sm leading-[17px] font-semibold md:w-auto md:bg-transparent md:p-0 md:text-base md:leading-5 md:dark:bg-transparent"
      >
        <p
          class="text-theme-secondary-700 dark:text-theme-dark-200 dim:text-theme-dim-200 text-sm md:text-base md:leading-5"
        >
          Voting for
        </p>
        <div
          class="xs:max-w-32 max-w-28 flex-1 truncate sm:max-w-40 md:max-w-60"
        >
          <div
            class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
          >
            <span>
              <span>
                <span
                  class="no-ligatures min-w-0 overflow-hidden dark:text-theme-dark-50 dim:text-theme-dim-50 text-sm md:text-base md:leading-5 font-semibold text-base"
                  data-testid="Address__address"
                >
                  0xcd15953dD076e56Dc6a5bc46Da23308Ff3158EE6
                </span>
              </span>
            </span>
          </div>
        </div>
      </div>
      <div
        class="flex flex-col gap-2 px-4 py-3 text-base leading-5 font-semibold md:flex-row md:items-center md:px-0 md:py-0"
      >
        <p
          class="text-theme-secondary-700 dark:text-theme-dark-200 dim:text-theme-dim-200 text-sm md:text-base md:leading-5"
        >
          Rank
        </p>
        <p
          class="text-theme-secondary-900 dark:text-theme-dark-50 dim:text-theme-dim-50 mb-2 text-sm font-semibold md:mb-0 md:text-base md:leading-5"
        >
          N/A
        </p>
        <p
          class="text-theme-secondary-700 dark:text-theme-dark-200 dim:text-theme-dim-200 text-sm md:hidden"
        >
          Validator Status
        </p>
        <div
          class="font-semibold overflow-hidden no-ligatures px-1 border-2 rounded text-theme-warning-700 border-theme-danger-100 dark:border-theme-warning-700 dim:border-solid flex h-fit w-fit items-center justify-center border-none py-0.5 text-xs dark:border-solid"
        >
          Standby
        </div>
        <div
          class="relative mx-2 border-t-0 border-l border-solid align-middle border-theme-secondary-300 dark:border-s-theme-dark-700 dim:border-s-theme-dim-700 mr-3 ml-1 hidden h-5 p-0 md:flex"
        />
      </div>
    </div>
    <div
      class="w-full md:w-auto md:max-md:self-end"
    >
      <span>
        <span>
          <div>
            <button
              class="px-5 py-3 text-base relative items-center justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-hidden rounded cursor-pointer focus:outline-hidden focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed bg-transparent dark:bg-transparent hover:text-theme-primary-700 hover:bg-theme-primary-200 dark:hover:bg-theme-secondary-800 dark:hover:text-white dim-hover:text-theme-dim-50 dim-hover:bg-theme-dim-700 dim:bg-transparent text-theme-primary-600 dark:text-theme-dark-navy-400 dim:text-theme-dim-navy-600 mt-4 hidden w-full space-x-2 disabled:bg-transparent md:mt-0 md:flex md:w-auto md:px-2 md:py-[3px] dark:disabled:bg-transparent"
              data-testid="WalletVote__button"
              type="button"
            >
              <div
                class="flex items-center gap-2"
              >
                <div>
                  <div
                    style="height: 16px; width: 16px;"
                  >
                    <svg
                      id="vote"
                      style="height: 100%; width: 100%;"
                      viewBox="0 0 20 20"
                      x="0"
                      xml:space="preserve"
                      xmlns="http://www.w3.org/2000/svg"
                      y="0"
                    >
                      <g
                        fill="none"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                      >
                        <path
                          d="M7 9.404l2.1 3.182c.2.298.4.398.7.398s.6-.1.8-.299l6.7-9.05"
                        />
                        <path
                          d="M19 12.337v4.077C19 17.807 17.9 19 16.5 19H3.6C2.2 18.9 1 17.906 1 16.414V3.486C1 2.094 2.1 1 3.5 1h6.8"
                        />
                      </g>
                    </svg>
                  </div>
                </div>
                <span>
                  Vote
                </span>
              </div>
            </button>
            <button
              class="px-5 py-3 space-x-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-hidden rounded cursor-pointer focus:outline-hidden focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed dark:bg-theme-dark-800 bg-theme-primary-100 hover:bg-theme-primary-800 hover:text-white dark:hover:bg-theme-primary-500 dim:bg-theme-dim-navy-900 dim-hover:bg-theme-dim-navy-700 dim-hover:text-white text-theme-primary-600 dim:text-theme-dim-navy-600 w-full disabled:bg-transparent md:hidden dark:text-white dark:disabled:bg-transparent"
              data-testid="WalletVote__button_mobile"
              type="button"
            >
              <div
                class="flex items-center gap-2"
              >
                <div>
                  <div
                    style="height: 16px; width: 16px;"
                  >
                    <svg
                      id="vote"
                      style="height: 100%; width: 100%;"
                      viewBox="0 0 20 20"
                      x="0"
                      xml:space="preserve"
                      xmlns="http://www.w3.org/2000/svg"
                      y="0"
                    >
                      <g
                        fill="none"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                      >
                        <path
                          d="M7 9.404l2.1 3.182c.2.298.4.398.7.398s.6-.1.8-.299l6.7-9.05"
                        />
                        <path
                          d="M19 12.337v4.077C19 17.807 17.9 19 16.5 19H3.6C2.2 18.9 1 17.906 1 16.414V3.486C1 2.094 2.1 1 3.5 1h6.8"
                        />
                      </g>
                    </svg>
                  </div>
                </div>
                <span>
                  Vote
                </span>
              </div>
            </button>
          </div>
        </span>
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`WalletVote > single vote networks > should render a vote for an active validator 1`] = `
<DocumentFragment>
  <div
    class="-mt-4 flex w-full flex-col items-center md:mt-0 md:flex-row md:items-center"
    data-testid="WalletVote"
  >
    <div
      class="border-theme-secondary-300 dark:border-theme-dark-700 dim:border-theme-dim-700 mb-3 flex w-full flex-col items-start justify-between gap-0 overflow-hidden rounded border md:mb-0 md:flex-row md:items-center md:gap-2 md:rounded-none md:border-none"
    >
      <div
        class="bg-theme-secondary-100 dark:bg-theme-dark-950 dim:bg-theme-dim-950 md:dim:bg-transparent flex w-full flex-1 flex-row items-center gap-2 p-3 text-sm leading-[17px] font-semibold md:w-auto md:bg-transparent md:p-0 md:text-base md:leading-5 md:dark:bg-transparent"
      >
        <p
          class="text-theme-secondary-700 dark:text-theme-dark-200 dim:text-theme-dim-200 text-sm md:text-base md:leading-5"
        >
          Voting for
        </p>
        <div
          class="xs:max-w-32 max-w-28 flex-1 truncate sm:max-w-40 md:max-w-60"
        >
          <div
            class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
          >
            <span>
              <span>
                <span
                  class="no-ligatures min-w-0 overflow-hidden dark:text-theme-dark-50 dim:text-theme-dim-50 text-sm md:text-base md:leading-5 font-semibold text-base"
                  data-testid="Address__address"
                >
                  0xcd15953dD076e56Dc6a5bc46Da23308Ff3158EE6
                </span>
              </span>
            </span>
          </div>
        </div>
      </div>
      <div
        class="flex flex-col gap-2 px-4 py-3 text-base leading-5 font-semibold md:flex-row md:items-center md:px-0 md:py-0"
      >
        <p
          class="text-theme-secondary-700 dark:text-theme-dark-200 dim:text-theme-dim-200 text-sm md:text-base md:leading-5"
        >
          Rank
        </p>
        <p
          class="text-theme-secondary-900 dark:text-theme-dark-50 dim:text-theme-dim-50 mb-2 text-sm font-semibold md:mb-0 md:text-base md:leading-5"
        >
          #10
        </p>
        <p
          class="text-theme-secondary-700 dark:text-theme-dark-200 dim:text-theme-dim-200 text-sm md:hidden"
        >
          Validator Status
        </p>
        <div
          class="font-semibold overflow-hidden no-ligatures px-1 border-2 rounded bg-theme-success-100 text-theme-success-700 dark:border dark:bg-transparent dark:text-theme-success-500 dim:text-theme-success-500 dark:border-theme-success-800 dim:border-theme-success-800 flex h-fit w-fit items-center justify-center border-none py-0.5 text-xs dark:border-solid"
        >
          Active
        </div>
        <div
          class="relative mx-2 border-t-0 border-l border-solid align-middle border-theme-secondary-300 dark:border-s-theme-dark-700 dim:border-s-theme-dim-700 mr-3 ml-1 hidden h-5 p-0 md:flex"
        />
      </div>
    </div>
    <div
      class="w-full md:w-auto md:max-md:self-end"
    >
      <span>
        <span>
          <div>
            <button
              class="px-5 py-3 text-base relative items-center justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-hidden rounded cursor-pointer focus:outline-hidden focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed bg-transparent dark:bg-transparent hover:text-theme-primary-700 hover:bg-theme-primary-200 dark:hover:bg-theme-secondary-800 dark:hover:text-white dim-hover:text-theme-dim-50 dim-hover:bg-theme-dim-700 dim:bg-transparent text-theme-primary-600 dark:text-theme-dark-navy-400 dim:text-theme-dim-navy-600 mt-4 hidden w-full space-x-2 disabled:bg-transparent md:mt-0 md:flex md:w-auto md:px-2 md:py-[3px] dark:disabled:bg-transparent"
              data-testid="WalletVote__button"
              type="button"
            >
              <div
                class="flex items-center gap-2"
              >
                <div>
                  <div
                    style="height: 16px; width: 16px;"
                  >
                    <svg
                      id="vote"
                      style="height: 100%; width: 100%;"
                      viewBox="0 0 20 20"
                      x="0"
                      xml:space="preserve"
                      xmlns="http://www.w3.org/2000/svg"
                      y="0"
                    >
                      <g
                        fill="none"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                      >
                        <path
                          d="M7 9.404l2.1 3.182c.2.298.4.398.7.398s.6-.1.8-.299l6.7-9.05"
                        />
                        <path
                          d="M19 12.337v4.077C19 17.807 17.9 19 16.5 19H3.6C2.2 18.9 1 17.906 1 16.414V3.486C1 2.094 2.1 1 3.5 1h6.8"
                        />
                      </g>
                    </svg>
                  </div>
                </div>
                <span>
                  Vote
                </span>
              </div>
            </button>
            <button
              class="px-5 py-3 space-x-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-hidden rounded cursor-pointer focus:outline-hidden focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed dark:bg-theme-dark-800 bg-theme-primary-100 hover:bg-theme-primary-800 hover:text-white dark:hover:bg-theme-primary-500 dim:bg-theme-dim-navy-900 dim-hover:bg-theme-dim-navy-700 dim-hover:text-white text-theme-primary-600 dim:text-theme-dim-navy-600 w-full disabled:bg-transparent md:hidden dark:text-white dark:disabled:bg-transparent"
              data-testid="WalletVote__button_mobile"
              type="button"
            >
              <div
                class="flex items-center gap-2"
              >
                <div>
                  <div
                    style="height: 16px; width: 16px;"
                  >
                    <svg
                      id="vote"
                      style="height: 100%; width: 100%;"
                      viewBox="0 0 20 20"
                      x="0"
                      xml:space="preserve"
                      xmlns="http://www.w3.org/2000/svg"
                      y="0"
                    >
                      <g
                        fill="none"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                      >
                        <path
                          d="M7 9.404l2.1 3.182c.2.298.4.398.7.398s.6-.1.8-.299l6.7-9.05"
                        />
                        <path
                          d="M19 12.337v4.077C19 17.807 17.9 19 16.5 19H3.6C2.2 18.9 1 17.906 1 16.414V3.486C1 2.094 2.1 1 3.5 1h6.8"
                        />
                      </g>
                    </svg>
                  </div>
                </div>
                <span>
                  Vote
                </span>
              </div>
            </button>
          </div>
        </span>
      </span>
    </div>
  </div>
</DocumentFragment>
`;
